...
                    android:layout_height="wrap_content"
                    android:text="Repeat X2"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/image_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/favorite"
                android:visibility="invisible" />

            <ImageView
...
