<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recyclerVie_workoutList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.RecycleViewWorkoutList">

    <TextView
        android:id="@+id/workout_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="WORKOUTS"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createWorkout_btn"
        android:layout_width="258dp"
        android:layout_height="49dp"
        android:text="Create workout"
        app:layout_constraintBottom_toTopOf="@+id/recycleView"
        app:layout_constraintEnd_toEndOf="@+id/workout_name"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/workout_name"
        app:layout_constraintTop_toBottomOf="@+id/workout_name"
        app:layout_constraintVertical_bias="0.083" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="140dp"
        app:layout_constraintTop_toBottomOf="@+id/workout_name" />
</androidx.constraintlayout.widget.ConstraintLayout>