<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.RecycleView">

    <TextView
        android:id="@+id/workout_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="WORKOUT 1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <ListView-->
<!--        android:id="@+id/listView2"-->
<!--        android:layout_width="409dp"-->
<!--        android:layout_height="822dp"-->
<!--        android:layout_marginTop="40dp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/workout_name"-->
<!--        tools:layout_editor_absoluteX="1dp" >-->

<!--    </ListView>-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@+id/workout_name" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="92dp"
        android:layout_height="53dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:text="Delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>